<resources>
    <!-- Name of the application -->
    <string name="app_name">Floating Overlay</string>

    <!-- Menu strings -->
    <string name="menu_settings">Settings</string>
    <string name="menu_check_update">Check for Updates</string>
    <string name="menu_info">About</string>
    <string name="feature_not_implemented">Feature not implemented</string>

    <!-- Main activity strings -->
    <string name="main_instructions_heading">Usage Instructions</string>
    <string name="main_instructions_text">
        This application displays a floating overlay with controls that allow changing the system
        volume. The application uses a foreground task to show the overlay. The floating overlay and
        service can be closed by pressing the exit button on the overlay itself (expanded view) or
        by pressing the close button displayed on the persistent foreground service notification.
        \n\n
        The overlay can be expanded by long pressing on the gesture icon. A single press on the gesture
        icon will increase the volume, while a double press will decrease it. The overlay can be
        flicked over to a side of the screen by preforming a horizontal flick gesture on the drag icon.
        \n\n
        The overlay may also be manually moved on screen via the drag icon (expanded view).
        \n\n
        To show the overlay, press the show overlay button.
    </string>
    <string name="main_show_overlay_btn">Show Overlay</string>

    <!-- Fragment Labels -->
    <string name="frag_title_settings">Settings</string>
    <string name="frag_title_perm_req">Permission Required</string>

    <!-- Setting Fragment String -->
    <string name="settings_frag_desc">Modify overlay settings</string>

    <string name="overlay_ui_scale">Scale Overlay Size</string>
    <string name="overlay_ui_scale_placeholder">1.0</string>
    <string name="overlay_timer_collapse">Collapse Timer</string>
    <string name="overlay_timer_collapse_placeholder">1</string>
    <string name="overlay_transparency">Overlay Transparency</string>
    <string name="overlay_transparency_placeholder">1.0</string>
    <string name="settings_save_settings_btn">Save Settings</string>
    <string name="settings_reset_settings_btn">Reset Settings</string>
    <string name="settings_overlay_preview_lbl">
        Preview your overlay setting before applying.
        To apply the settings to the floating overlay, press on the \"Save Settings\" button.
    </string>

    <!-- Permissions activity strings -->
    <string name="perm_req_heading">Permission Required</string>
    <string name="perm_req_message">
        This app requires extra permissions to be able to run. If the permissions are not granted
        the application will not work on your device.
    </string>

    <string name="perm_req_notify">Display Persistent Notification</string>
    <string name="perm_req_notify_msg">
        The application shows a persistent notification while the overlay is visible.
    </string>
    <string name="perm_granted_notify_msg">
        You have granted the notification permission! The application will use this permission
        to shows a persistent notification while the overlay is visible.
    </string>

    <string name="perm_req_foreground">Foreground Service</string>
    <string name="perm_req_foreground_msg">
        The application uses a foreground service to display a floating overlay with controls.
    </string>
    <string name="perm_granted_foreground_msg">
        You have granted the foreground service permission! The application uses a foreground
        service to display a floating overlay with controls.
    </string>

    <string name="perm_req_overlay">Draw Over Other Apps</string>
    <string name="perm_req_overlay_msg">
        The application will draw an overlay with controls over other applications.
    </string>
    <string name="perm_granted_overlay_msg">
        You have granted the draw over other apps permission! The application will draw an overlay
        with controls over other applications.
    </string>

    <string name="perm_req_exit_msg">If you wish to close the application please press the back button.</string>
    <string name="perm_req_modify_btn">Grant Permission</string>

    <string name="perm_notify_denied">Notification permission was denied!</string>

    <!-- Overlay service strings -->
    <string name="overlay_serv_notif_title">Overlay Visible</string>
    <string name="overlay_serv_notif_text">Floating controls overlay is currently visible</string>
    <string name="overlay_serv_notif_close_action">Close</string>
    <string name="overlay_serv_notif_channel">Overlay Service Notifications</string>

    <string name="frag_update_check_error">An error occurred while checking for an update.\nPlease try again later.</string>
    <string name="frag_update_promt_title">Update Available</string>
    <string name="frag_update_promt_msg">An update is available for the app. Do you wish to view more details?\n\nInstalled Version: %s\nNew Version: %s</string>
    <string name="frag_update_promt_btn_confirm">View Details</string>
    <string name="frag_update_promt_btn_cancel">Cancel</string>

    <!-- Update Info Fragment Strings -->
    <string name="frag_update_info_error_msg">Latest release info is invalid!</string>
    <string name="frag_update_info_update_ver_lbl">New Version: %s</string>
    <string name="frag_update_info_current_ver_lbl">Installed Version: %s</string>
    <string name="frag_update_info_download_size_lbl">Update Size: %s</string>
    <string name="frag_update_info_update_btn">Download and Update</string>
    <string name="frag_update_info_changelog_placeholder" translatable="false">
        Change Log\n
        \n
        * Change 1\n
        * Change 2\n
        * Change 3\n
        \n
        Previous Changes for Major Version\n
        \n
        * V0.2:\n
        \n
        * Older change 1\n
        * Older change 2\n
        * Older change 3\n
        \n
        * V0.1:\n
        \n
        * Older older change 1\n
        * Older older change 2\n
        * Older older change 3\n
    </string>
    <string name="frag_update_info_changelog_error">
        <b>An error occurred while retrieving the update details.\nPlease try to recheck for updates!</b>
    </string>
</resources>