<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="48dp">
        <LinearLayout android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:text="@string/perm_req_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textAlignment="center"
                android:layout_marginBottom="@dimen/material_item_spacing_small"/>

            <TextView
                android:text="@string/perm_req_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_item_spacing"
                android:layout_marginBottom="@dimen/material_item_spacing"/>

            <!-- Notification permission prompt -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/material_item_spacing_small"
                android:textAlignment="center"
                android:text="@string/perm_req_notify"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/material_item_spacing" >
                <ImageView
                    android:id="@+id/notify_perm_img"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_width="@dimen/material_item_spacing_double"
                    android:layout_height="@dimen/material_item_spacing_double"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_notifications"
                    android:contentDescription="@string/perm_req_notify"/>
                <TextView
                    android:id="@+id/notify_perm_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="@string/perm_req_notify_msg"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            </LinearLayout>

            <!-- Foreground service permission prompt -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/material_item_spacing_small"
                android:textAlignment="center"
                android:text="@string/perm_req_foreground"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/material_item_spacing" >
                <ImageView
                    android:id="@+id/foreground_perm_img"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_width="@dimen/material_item_spacing_double"
                    android:layout_height="@dimen/material_item_spacing_double"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_browse_activity"
                    android:contentDescription="@string/perm_req_foreground"/>
                <TextView
                    android:id="@+id/foreground_perm_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="@string/perm_req_foreground_msg"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            </LinearLayout>

            <!-- Draw over other apps permission prompt -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/material_item_spacing_small"
                android:textAlignment="center"
                android:text="@string/perm_req_overlay"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/material_item_spacing" >
                <ImageView
                    android:id="@+id/draw_perm_img"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_width="@dimen/material_item_spacing_double"
                    android:layout_height="@dimen/material_item_spacing_double"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_layers"
                    android:contentDescription="@string/perm_req_overlay"/>
                <TextView
                    android:id="@+id/draw_perm_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="@string/perm_req_overlay_msg"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/material_item_spacing"/>

            <TextView
                android:text="@string/perm_req_exit_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/material_item_spacing"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textAlignment="center" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/permission_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:onClick="grantPermissionsButtonClick"
        android:text="@string/perm_req_modify_btn" />
</RelativeLayout>