<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:text="@string/settings_frag_desc" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_item_spacing"
            android:layout_marginBottom="@dimen/material_item_spacing" />

        <TextView
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overlay_ui_scale"
            android:labelFor="@id/overlayUIScale" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_item_spacing_small"
            android:layout_marginBottom="@dimen/material_item_spacing_small"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/overlayUIScaleValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/material_item_spacing_small"
                android:text="@string/overlay_ui_scale_placeholder"
                android:labelFor="@id/overlayUIScale" />

            <SeekBar
                android:id="@+id/overlayUIScale"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:min="0"
                android:max="7"
                android:progress="2"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overlay_timer_collapse"
            android:labelFor="@id/overlayCollapseTimer" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_item_spacing_small"
            android:layout_marginBottom="@dimen/material_item_spacing_small"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/overlayCollapseTimerValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/material_item_spacing"
                android:text="@string/overlay_timer_collapse_placeholder"
                android:labelFor="@id/overlayCollapseTimer" />

            <SeekBar
                android:id="@+id/overlayCollapseTimer"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:min="1"
                android:max="8"
                android:progress="1"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overlay_transparency"
            android:labelFor="@id/overlayTransparency" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_item_spacing_small"
            android:layout_marginBottom="@dimen/material_item_spacing_small"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/overlayTransparencyValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/material_item_spacing"
                android:text="@string/overlay_transparency_placeholder"
                android:labelFor="@id/overlayTransparency" />

            <SeekBar
                android:id="@+id/overlayTransparency"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:min="0"
                android:max="5"
                android:progress="5"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!-- Colour selector -->
        <TextView
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Overlay Colour"
            android:labelFor="@id/overlayTransparency" />

        <RadioGroup
            android:id="@+id/overlay_colour_rg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/material_item_spacing_small"
            android:layout_marginBottom="@dimen/material_item_spacing_small" >
            <RadioButton
                android:id="@+id/overlay_colour_prim_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Primary" />
            <RadioButton
                android:id="@+id/overlay_colour_sec_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Secondary" />
            <RadioButton
                android:id="@+id/overlay_colour_tert_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tertiary" />
        </RadioGroup>

        <!-- Container that contains the reset and save buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/reset_settings_btn"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/material_item_spacing_xsmall"
                android:text="@string/settings_reset_settings_btn" />

            <Button
                android:id="@+id/save_settings_btn"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/material_item_spacing_xsmall"
                android:text="@string/settings_save_settings_btn" />

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_item_spacing"
            android:layout_marginBottom="@dimen/material_item_spacing" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:layout_marginBottom="@dimen/material_item_spacing"
            android:text="@string/settings_overlay_preview_lbl" />

        <include layout="@layout/overlay_layout"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>
</ScrollView>