<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/fragmentHome">

    <fragment
        android:id="@+id/fragmentHome"
        android:name="nz.co.zsd.floatingoverlay.FragmentHome"
        tools:layout="@layout/fragment_home"
        android:label="@string/app_name" >
        <action
            android:id="@+id/action_fragmentHome_to_fragmentPermissionReq"
            app:destination="@id/fragmentPermissionReq" />
        <action
            android:id="@+id/action_fragmentHome_to_fragmentSettings"
            app:destination="@id/fragmentSettings" />
        <action
            android:id="@+id/action_fragmentHome_to_fragmentUpdateInfo"
            app:destination="@id/fragmentUpdateInfo" />
    </fragment>
    <fragment
        android:id="@+id/fragmentSettings"
        android:name="nz.co.zsd.floatingoverlay.FragmentSettings"
        tools:layout="@layout/fragment_settings"
        android:label="@string/frag_title_settings" >
        <action
            android:id="@+id/action_fragmentSettings_to_fragmentPermissionReq"
            app:destination="@id/fragmentPermissionReq" />
        <action
            android:id="@+id/action_fragmentSettings_to_fragmentUpdateInfo"
            app:destination="@id/fragmentUpdateInfo" />
    </fragment>
    <fragment
        android:id="@+id/fragmentPermissionReq"
        android:name="nz.co.zsd.floatingoverlay.FragmentPermissionReq"
        tools:layout="@layout/fragment_permission_req"
        android:label="@string/frag_title_perm_req" />
    <fragment
        android:id="@+id/fragmentUpdateInfo"
        android:name="nz.co.zsd.floatingoverlay.FragmentUpdate"
        tools:layout="@layout/fragment_update_info"
        android:label="Update Available">
        <action
            android:id="@+id/action_fragmentUpdateInfo_to_fragmentPermissionReq"
            app:destination="@id/fragmentPermissionReq" />
    </fragment>
</navigation>